# CUMCM20250904

./: .gitignore  PCA聚类结果.xlsx  README.md  main.py  output.txt  pyproject.toml  男胎.xlsx
output/: bls_01.xlsx  bls_02.xlsx  output.txt  pca_01.xlsx  pca_02.xlsx  日期偏移值.xlsx  男胎检测数据_聚类结果.xlsx  男胎转化后.xlsx  第二问聚类结果.xlsx  第四问预处理.xlsx
