[project]
name = "cumcm-2025-9-4"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "cvxpy>=1.7.2",
    "deap>=1.4.3",
    "gurobipy>=12.0.3",
    "matlabengine>=25.1.2",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pandas-stubs>=2.3.2.250827",
    "prophet>=1.1.7",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "scipy-stubs>=1.16.1.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "tqdm>=4.67.1",
    "xgboost>=3.0.4",
]
